# cookiecutter-conda-python

./: README.md  setup.sh
cookiecutter-conda-python/: FILE_MAP.md  cookiecutter.json
cookiecutter-conda-python/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment-dev.yml  environment.yml  pyproject.toml
cookiecutter-conda-python/{{cookiecutter.project_name}}/.github/workflows/: ci.yml  docs.yml
cookiecutter-conda-python/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
